--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-APP_ENV=development
+APP_ENV=production
 DB_DRIVER=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_NAME=aman
-DB_USER=root
-DB_PASS=
+DB_NAME=tpkzcvpmju
+DB_USER=tpkzcvpmju
+DB_PASS=sg7uCcHVwS
